k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paves-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://d15j2ej3bear0q.cloudfront.net"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ums
            pathType: Prefix
            backend:
              service:
                name: ums-service
                port:
                  number: 8000
          - path: /tms
            pathType: Prefix
            backend:
              service:
                name: tms-service
                port:
                  number: 5000
          - path: /lms
            pathType: Prefix
            backend:
              service:
                name: lms-service
                port:
                  number: 9999
          - path: /pms
            pathType: Prefix
            backend:
              service:
                name: pms-service
                port:
                  number: 8080
          - path: /rms
            pathType: Prefix
            backend:
              service:
                name: rms-service
                port:
                  number: 8080
          - path: /ems
            pathType: Prefix
            backend:
              service:
                name: eos-service
                port:
                  number: 8000
          - path: /xms
            pathType: Prefix
            backend:
              service:
                name: xms-service
                port:
                  number: 8080
          - path: /airs
            pathType: Prefix
            backend:
              service:
                name: airs-service
                port:
                  number: 8002
          - path: /ar
            pathType: Prefix
            backend:
              service:
                name: ar-service
                port:
                  number: 8080
